wxc/include/ewxw/wxc_glue.h



/* wxListItem */
TClassDefExtend(wxListItem,wxObject)
void       wxListItem_Clear( TSelf(wxListItem) _obj );

void       wxListItem_ClearAttributes( TSelf(wxListItem) _obj );

TClass(wxListItem) wxListItem_Create(  );

void       wxListItem_Delete( TSelf(wxListItem) _obj );

int        wxListItem_GetAlign( TSelf(wxListItem) _obj );

void*      wxListItem_GetAttributes( TSelf(wxListItem) _obj );

void       wxListItem_GetBackgroundColour( TSelf(wxListItem) _obj, TClassRef(wxColour) _ref );

int        wxListItem_GetColumn( TSelf(wxListItem) _obj );

int        wxListItem_GetData( TSelf(wxListItem) _obj );

void       wxListItem_GetFont( TSelf(wxListItem) _obj, TClassRef(wxFont) _ref );

int        wxListItem_GetId( TSelf(wxListItem) _obj );

int        wxListItem_GetImage( TSelf(wxListItem) _obj );

int        wxListItem_GetMask( TSelf(wxListItem) _obj );

int        wxListItem_GetState( TSelf(wxListItem) _obj );

TStringLen wxListItem_GetText( TSelf(wxListItem) _obj, TStringOutVoid _buf );

void       wxListItem_GetTextColour( TSelf(wxListItem) _obj, TClassRef(wxColour) _ref );

int        wxListItem_GetWidth( TSelf(wxListItem) _obj );

TBool      wxListItem_HasAttributes( TSelf(wxListItem) _obj );

void       wxListItem_SetAlign( TSelf(wxListItem) _obj, int align );

void       wxListItem_SetBackgroundColour( TSelf(wxListItem) _obj, TClass(wxColour) colBack );

void       wxListItem_SetColumn( TSelf(wxListItem) _obj, int col );

void       wxListItem_SetData( TSelf(wxListItem) _obj, int data );

void       wxListItem_SetDataPointer( TSelf(wxListItem) _obj, void* data );

void       wxListItem_SetFont( TSelf(wxListItem) _obj, TClass(wxFont) font );

void       wxListItem_SetId( TSelf(wxListItem) _obj, int id );

void       wxListItem_SetImage( TSelf(wxListItem) _obj, int image );

void       wxListItem_SetMask( TSelf(wxListItem) _obj, int mask );

void       wxListItem_SetState( TSelf(wxListItem) _obj, int state );

void       wxListItem_SetStateMask( TSelf(wxListItem) _obj, int stateMask );

void       wxListItem_SetText( TSelf(wxListItem) _obj, TStringVoid text );

void       wxListItem_SetTextColour( TSelf(wxListItem) _obj, TClass(wxColour) colText );

void       wxListItem_SetWidth( TSelf(wxListItem) _obj, int width );